--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= productName %></title>
+    <title>{{ title }}</title>
+
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="{{ description }}">
+    <meta property="og:image" content="{{ image_url }}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ absolute_url }}">
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ title }}" />
+    <meta name="twitter:description" content="{{ description }}" />
+    <meta name="twitter:image" content="{{ image_url }}" />
+    <meta name="twitter:site" content="{{ absolute_url }}" />
 
     <meta charset="utf-8">
-    <meta name="description" content="<%= productDescription %>">
+    <meta name="description" content="{{ description }}">
+    <meta name="robots" content="index, follow" />
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
@@ -14,6 +27,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="canonical" href="{{ absolute_url }}" />
   </head>
   <body>
     <!-- quasar:entry-point -->
